--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,26 +30,28 @@
         android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp" />
-    <ScrollView
-        app:layout_constraintTop_toBottomOf="@id/btn_to_report"
+
+    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/btn_to_report"
         android:layout_margin="20dp"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal"
+        android:background="@drawable/default_option_border_10"
+        >
         <LinearLayout
-            android:id="@+id/ll1"
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/default_option_border_10"
-            app:layout_constraintTop_toBottomOf="@id/btn_to_report"
-            android:orientation="horizontal">
+            android:layout_margin="10dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/btn_to_report">
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:baselineAligned="false"
-                android:orientation="horizontal"
-                tools:listitem="@layout/cardview__" />
+                android:baselineAligned="false" />
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
